--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 </head>
 
 <body>
+    <header id="header" class="text-center">
+        <h1 class="py-3">Free Phone</h1>
+        <div class="input-group mb-3 w-25 m-auto">
+            <input id="input-field" type="text" class="form-control" placeholder="Search Phone"
+                aria-label="Recipient's username" aria-describedby="button-addon2">
+
+            <button id="search-btn" class="btn btn-outline-secondary" type="button">Search</button>
+        </div>
+        <div id="error-section"></div>
+    </header>
+    <main id="main">
+        <section id="main-section"></section>
+    </main>
+    <footer id="footer"></footer>
 
     <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
