--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <input id="input-field" type="text" class="form-control" placeholder="Search Phone"
                 aria-label="Recipient's username" aria-describedby="button-addon2">
 
-            <button id="search-btn" class="btn btn-outline-secondary" type="button">Search</button>
+            <button id="search-btn" class="btn btn-outline-secondary" type="button"
+                onclick="loadPhones()">Search</button>
         </div>
         <div id="error-section"></div>
     </header>
