displayPhones function added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <div id="error-section"></div>
     </header>
     <main id="main">
-        <section id="main-section"></section>
+        <section id="main-section" class="row row-cols-1 row-cols-md-3 g-4 text-center">
+
+        </section>
     </main>
     <footer id="footer"></footer>
 
