--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 onclick="loadPhones()">Search</button>
         </div>
         <div id="error-section"></div>
+        <div id="phone-details"></div>
     </header>
     <main id="main">
         <section id="main-section" class="row row-cols-1 row-cols-md-3 g-4 text-center">
