spinner added, not setlle yet

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
 
             <button id="search-btn" class="btn btn-outline-secondary" type="button"
                 onclick="loadPhones()">Search</button>
+
+            <div id="spinner" class="text-center" type>
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
         </div>
         <div id="error-section"></div>
         <div id="phone-details"></div>
